--- a/less/blog.less
+++ b/less/blog.less
@@ -137,5 +137,65 @@ main {
                 justify-content: space-between;
             }
         }
+
+        .popular-articles, .topic-one-articles, .topic-two-articles, .topic-three-articles {
+            display: flex;
+            flex-wrap: wrap;
+            width: 120rem;
+
+        
+
+            section {
+                width: 28.33%;
+                margin-left: 2.5%;
+                margin-right: 2.5%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+
+
+                img {
+                    height: 15rem;
+                    width: 28rem;
+                    margin-top: 2rem;
+                }
+
+                h4 {
+                    margin-top: 2rem;
+                    font-size: 1.5rem;
+                }
+
+                p {
+                    margin-top: 2rem;
+                }
+            }
+
+
+        }
+
+        h3:first-of-type {
+            display: flex;
+            width: 100%;
+            font-size: 1.5rem;
+            margin-left: 2.5%;
+            margin-top: 6rem;
+        }
+
+
+        aside {
+            width: 100%;
+            height: 20rem;
+            background-color: gray;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 6rem;
+        }
     }
+}
+
+footer {
+
 }
