--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,7 @@ body a,
 body p {
   font-size: 1.6rem;
 }
-header.nav-toolbar {
+header.h-nav-toolbar {
   height: 60px;
   width: 80%;
   padding-left: 10%;
@@ -132,29 +132,29 @@ header.nav-toolbar {
   align-items: center;
   background-color: purple;
 }
-header.nav-toolbar h1 {
+header.h-nav-toolbar h1 {
   width: 33%;
   text-decoration: none;
   color: white;
   font-weight: bold;
   font-size: 3.2rem;
 }
-header.nav-toolbar nav.nav-links {
+header.h-nav-toolbar nav.h-nav-links {
   width: 33%;
   display: flex;
   justify-content: space-around;
 }
-header.nav-toolbar nav.nav-links a {
+header.h-nav-toolbar nav.h-nav-links a {
   text-decoration: none;
   color: white;
   font-weight: bold;
 }
-header.nav-toolbar nav.social-links {
+header.h-nav-toolbar nav.h-social-links {
   width: 33%;
   display: flex;
   justify-content: flex-end;
 }
-header.nav-toolbar nav.social-links a {
+header.h-nav-toolbar nav.h-social-links a {
   text-decoration: none;
   color: white;
   font-weight: bold;
@@ -169,7 +169,8 @@ main article {
 main article header {
   width: 120rem;
   height: 45rem;
-  background-color: pink;
+  border-radius: 2.5rem;
+  background-color: lightgray;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -191,10 +192,14 @@ main article header button {
   width: 10rem;
 }
 main article header ul {
+  margin-top: 1rem;
   margin-bottom: 5rem;
-  width: 50%;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+}
+main article header ul .icon-label {
+  margin-top: 1rem;
 }
 main article .popular-articles,
 main article .topic-one-articles,
@@ -213,16 +218,14 @@ main article .topic-three-articles section {
   margin-right: 2.5%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
 }
 main article .popular-articles section img,
 main article .topic-one-articles section img,
 main article .topic-two-articles section img,
 main article .topic-three-articles section img {
-  height: 15rem;
-  width: 28rem;
   margin-top: 2rem;
+  border-radius: 2.5rem;
 }
 main article .popular-articles section h4,
 main article .topic-one-articles section h4,
@@ -247,10 +250,81 @@ main article h3:first-of-type {
 main article aside {
   width: 100%;
   height: 20rem;
-  background-color: gray;
+  background-color: lightgray;
+  margin-top: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main article aside .outer-container {
+  width: 120rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main article aside .left-container {
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+main article aside .right-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 6rem;
+}
+footer .f-nav-container {
+  height: 60px;
+  width: 80%;
+  padding-left: 10%;
+  padding-right: 10%;
+  display: flex;
+  align-items: center;
+  background-color: purple;
+}
+footer .f-nav-container h1 {
+  width: 33%;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 3.2rem;
+}
+footer .f-nav-container nav.f-nav-links {
+  width: 33%;
+  display: flex;
+  justify-content: space-around;
+}
+footer .f-nav-container nav.f-nav-links a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+footer .f-nav-container nav.f-social-links {
+  width: 33%;
+  display: flex;
+  justify-content: flex-end;
+}
+footer .f-nav-container nav.f-social-links a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  padding-left: 20px;
+}
+footer p {
+  display: flex;
+  justify-content: center;
+  background-color: purple;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  width: 100%;
+  color: white;
+  font-size: 1.2rem;
 }
