--- a/less/blog.less
+++ b/less/blog.less
@@ -51,7 +51,7 @@ body {
     }
 }
 
-header.nav-toolbar {
+header.h-nav-toolbar {
     height: 60px;
     width: 80%;
     padding-left: 10%;
@@ -68,7 +68,7 @@ header.nav-toolbar {
         font-size: 3.2rem;
     }
 
-    nav.nav-links {
+    nav.h-nav-links {
         width: 33%;
         display: flex;
         justify-content: space-around;
@@ -80,7 +80,7 @@ header.nav-toolbar {
         }
     }
 
-    nav.social-links {
+    nav.h-social-links {
         width: 33%;
         display: flex;
         justify-content: flex-end;
@@ -106,7 +106,8 @@ main {
         header {
             width: 120rem;
             height: 45rem;
-            background-color: pink;
+            border-radius: 2.5rem;
+            background-color: lightgray;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -131,11 +132,18 @@ main {
                 width: 10rem;
             }
             ul {
+                margin-top: 1rem;
                 margin-bottom: 5rem;
-                width: 50%;
+                width: 100%;
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-evenly;
+
+                .icon-label {
+                    margin-top: 1rem;
+                }
             }
+
+           
         }
 
         .popular-articles, .topic-one-articles, .topic-two-articles, .topic-three-articles {
@@ -151,14 +159,12 @@ main {
                 margin-right: 2.5%;
                 display: flex;
                 flex-direction: column;
-                align-items: center;
                 justify-content: space-between;
 
 
                 img {
-                    height: 15rem;
-                    width: 28rem;
                     margin-top: 2rem;
+                    border-radius: 2.5rem;
                 }
 
                 h4 {
@@ -186,16 +192,94 @@ main {
         aside {
             width: 100%;
             height: 20rem;
-            background-color: gray;
+            background-color: lightgray;
+            margin-top: 6rem;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            margin-top: 6rem;
+
+            .outer-container {
+                width: 120rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .left-container {
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            } 
+            
+            .right-container {
+                width: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
     }
 }
 
 footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 6rem;
 
+    .f-nav-container {
+        height: 60px;
+        width: 80%;
+        padding-left: 10%;
+        padding-right: 10%;
+        display: flex;
+        align-items: center;
+        background-color: purple;
+    
+        h1 {
+            width: 33%;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            font-size: 3.2rem;
+        }
+    
+        nav.f-nav-links {
+            width: 33%;
+            display: flex;
+            justify-content: space-around;
+    
+            a {
+                text-decoration: none;
+                color: white;
+                font-weight: bold;
+            }
+        }
+    
+        nav.f-social-links {
+            width: 33%;
+            display: flex;
+            justify-content: flex-end;
+    
+            a {
+                text-decoration: none;
+                color: white;
+                font-weight: bold;
+                padding-left: 20px;
+            }
+        }
+    }
+
+    p {
+        display: flex;
+        justify-content: center;
+        background-color: purple;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        width: 100%;
+        color: white;
+        font-size: 1.2rem;
+    }
 }
