--- a/less/blog.less
+++ b/less/blog.less
@@ -3,55 +3,305 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 62.5%;
-	// font: initial;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 62.5%;
+  // font: initial;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
 
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 body {
-    line-height: 1;
-    font-family: "Helvetica", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-    // font-weight: 300;
+  line-height: 1;
+  font-family: "Helvetica", "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
+  // font-weight: 300;
 
-    @media @tablet {
-        width: 800px;
-        justify-content: center;
-    }
+  @media @tablet {
+    width: 800px;
+    justify-content: center;
+  }
 
-    @media @mobile {
-        width: 500px;
-        justify-content: center;
-    }
+  @media @mobile {
+    width: 500px;
+    justify-content: center;
+  }
 
-    a, p {
-        font-size: 1.6rem;
-    }
+  a,
+  p {
+    font-size: 1.6rem;
+  }
 }
 
 header.h-nav-toolbar {
+  height: 60px;
+  width: 80%;
+  padding-left: 10%;
+  padding-right: 10%;
+  display: flex;
+  align-items: center;
+  background-color: purple;
+
+  h1 {
+    width: 33%;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 3.2rem;
+  }
+
+  nav.h-nav-links {
+    width: 33%;
+    display: flex;
+    justify-content: space-around;
+
+    a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+    }
+  }
+
+  nav.h-social-links {
+    width: 33%;
+    display: flex;
+    justify-content: flex-end;
+
+    a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      padding-left: 20px;
+    }
+  }
+}
+
+main {
+  article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5rem;
+
+    header {
+      width: 120rem;
+      height: 45rem;
+      border-radius: 2.5rem;
+      background-color: lightgray;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+
+      p {
+        margin-top: 5rem;
+        font-size: 1.5rem;
+      }
+
+      h2 {
+        font-size: 4rem;
+      }
+
+      input {
+        width: 45rem;
+        height: 45rem;
+      }
+
+      button {
+        height: 5rem;
+        width: 10rem;
+      }
+      ul {
+        margin-top: 1rem;
+        margin-bottom: 5rem;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+
+        .icon-label {
+          margin-top: 1rem;
+        }
+      }
+    }
+
+    .popular-articles,
+    .topic-one-articles,
+    .topic-two-articles,
+    .topic-three-articles {
+      display: flex;
+      flex-wrap: wrap;
+      width: 120rem;
+
+      section {
+        width: 28.33%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        img {
+          margin-top: 2rem;
+          border-radius: 2.5rem;
+        }
+
+        h4 {
+          margin-top: 2rem;
+          font-size: 1.5rem;
+        }
+
+        p {
+          margin-top: 2rem;
+        }
+      }
+    }
+
+    h3:first-of-type {
+      display: flex;
+      width: 100%;
+      font-size: 1.5rem;
+      margin-left: 2.5%;
+      margin-top: 6rem;
+    }
+
+    aside {
+      width: 100%;
+      height: 20rem;
+      background-color: lightgray;
+      margin-top: 6rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .outer-container {
+        width: 120rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .left-container {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .right-container {
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 6rem;
+
+  .f-nav-container {
     height: 60px;
     width: 80%;
     padding-left: 10%;
@@ -61,225 +311,47 @@ header.h-nav-toolbar {
     background-color: purple;
 
     h1 {
-        width: 33%;
+      width: 33%;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      font-size: 3.2rem;
+    }
+
+    nav.f-nav-links {
+      width: 33%;
+      display: flex;
+      justify-content: space-around;
+
+      a {
         text-decoration: none;
         color: white;
         font-weight: bold;
-        font-size: 3.2rem;
+      }
     }
 
-    nav.h-nav-links {
-        width: 33%;
-        display: flex;
-        justify-content: space-around;
+    nav.f-social-links {
+      width: 33%;
+      display: flex;
+      justify-content: flex-end;
 
-        a {
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-    }
-
-    nav.h-social-links {
-        width: 33%;
-        display: flex;
-        justify-content: flex-end;
-
-        a {
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            padding-left: 20px;
-        }
-    }
-}
-
-main {
-
-    article {
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 5rem;
-
-        header {
-            width: 120rem;
-            height: 45rem;
-            border-radius: 2.5rem;
-            background-color: lightgray;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
-
-            p {
-                margin-top: 5rem;
-                font-size: 1.5rem;
-            }
-
-            h2 {
-                font-size: 4rem;
-            }
-
-            input {
-                width: 45rem;
-                height: 45rem;
-            }
-
-            button {
-                height: 5rem;
-                width: 10rem;
-            }
-            ul {
-                margin-top: 1rem;
-                margin-bottom: 5rem;
-                width: 100%;
-                display: flex;
-                justify-content: space-evenly;
-
-                .icon-label {
-                    margin-top: 1rem;
-                }
-            }
-
-           
-        }
-
-        .popular-articles, .topic-one-articles, .topic-two-articles, .topic-three-articles {
-            display: flex;
-            flex-wrap: wrap;
-            width: 120rem;
-
-        
-
-            section {
-                width: 28.33%;
-                margin-left: 2.5%;
-                margin-right: 2.5%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-
-
-                img {
-                    margin-top: 2rem;
-                    border-radius: 2.5rem;
-                }
-
-                h4 {
-                    margin-top: 2rem;
-                    font-size: 1.5rem;
-                }
-
-                p {
-                    margin-top: 2rem;
-                }
-            }
-
-
-        }
-
-        h3:first-of-type {
-            display: flex;
-            width: 100%;
-            font-size: 1.5rem;
-            margin-left: 2.5%;
-            margin-top: 6rem;
-        }
-
-
-        aside {
-            width: 100%;
-            height: 20rem;
-            background-color: lightgray;
-            margin-top: 6rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            .outer-container {
-                width: 120rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-
-            .left-container {
-                width: 50%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            } 
-            
-            .right-container {
-                width: 50%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-        }
-    }
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 6rem;
-
-    .f-nav-container {
-        height: 60px;
-        width: 80%;
-        padding-left: 10%;
-        padding-right: 10%;
-        display: flex;
-        align-items: center;
-        background-color: purple;
-    
-        h1 {
-            width: 33%;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            font-size: 3.2rem;
-        }
-    
-        nav.f-nav-links {
-            width: 33%;
-            display: flex;
-            justify-content: space-around;
-    
-            a {
-                text-decoration: none;
-                color: white;
-                font-weight: bold;
-            }
-        }
-    
-        nav.f-social-links {
-            width: 33%;
-            display: flex;
-            justify-content: flex-end;
-    
-            a {
-                text-decoration: none;
-                color: white;
-                font-weight: bold;
-                padding-left: 20px;
-            }
-        }
-    }
-
-    p {
-        display: flex;
-        justify-content: center;
-        background-color: purple;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-        width: 100%;
+      a {
+        text-decoration: none;
         color: white;
-        font-size: 1.2rem;
+        font-weight: bold;
+        padding-left: 20px;
+      }
     }
+  }
+
+  p {
+    display: flex;
+    justify-content: center;
+    background-color: purple;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100%;
+    color: white;
+    font-size: 1.2rem;
+  }
 }
