--- a/css/index.css
+++ b/css/index.css
@@ -328,3 +328,57 @@ footer p {
   color: white;
   font-size: 1.2rem;
 }
+.above-fold-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.above-fold-upper {
+  height: 50%;
+  background-color: purple;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.content-container {
+  width: 1400px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 25%;
+}
+.content-container img {
+  height: 380px;
+  width: 315px;
+}
+.content-container .text-container {
+  margin-left: 80px;
+  align-self: center;
+}
+.content-container .text-container h1 {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+.content-container .text-container p {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+.above-fold-lower {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 1400px;
+}
+.above-fold-lower h2 {
+  font-size: 30px;
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+.above-fold-lower p {
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+.above-fold-lower button {
+  width: 120px;
+  height: 30px;
+}
