--- a/less/index.less
+++ b/less/index.less
@@ -1,2 +1,67 @@
 @import "variables.less";
 @import "blog.less";
+
+.above-fold-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.above-fold-upper {
+  height: 50%;
+  background-color: purple;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-container {
+  width: 1400px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 25%;
+
+  img {
+    height: 380px;
+    width: 315px;
+  }
+
+  .text-container {
+    margin-left: 80px;
+    align-self: center;
+
+    h1 {
+      font-size: 50px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 25px;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.above-fold-lower {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 1400px;
+
+  h2 {
+    font-size: 30px;
+    margin-top: 60px;
+    margin-bottom: 30px;
+  }
+
+  p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+
+  button {
+    width: 120px;
+    height: 30px;
+  }
+}
