--- a/less/index.less
+++ b/less/index.less
@@ -1,8 +1,14 @@
 @import "variables.less";
 @import "blog.less";
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .above-fold-container {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
@@ -47,11 +53,12 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  justify-content: center;
   width: 1400px;
+  height: 50%;
 
   h2 {
     font-size: 30px;
-    margin-top: 60px;
     margin-bottom: 30px;
   }
 
@@ -63,5 +70,64 @@
   button {
     width: 120px;
     height: 30px;
+  }
+}
+
+.below-fold-container {
+  width: 1400px;
+  display: flex;
+  flex-direction: column;
+
+  h2 {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+
+  p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+
+  h3 {
+    margin-top: 30px;
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+
+  h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .projects-container {
+    h2 {
+      margin-top: 60px;
+    }
+
+    section.project {
+      height: 800px;
+      width: 100%;
+      background-color: pink;
+      margin-bottom: 20px;
+      display: flex;
+
+      .project-left-half {
+        width: 45%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+        background-color: fuchsia;
+      }
+
+      .project-right-half {
+        width: 50%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+        background-color: grey;
+      }
+    }
+  }
+
+  .contact-form {
+    width: 100%;
   }
 }
