--- a/less/index.less
+++ b/less/index.less
@@ -6,128 +6,147 @@ main {
   flex-direction: column;
   align-items: center;
 }
-.above-fold-container {
+.above-fold-intro-container {
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
+  max-height: 100%;
   display: flex;
-  flex-direction: column;
-}
+  // border: 1px solid yellow;
 
-.above-fold-upper {
-  height: 50%;
-  background-color: purple;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.content-container {
-  width: 1400px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  margin-left: 25%;
-
-  img {
-    height: 380px;
-    width: 315px;
+  .left-wrapper {
+    width: 100%;
+    // border: 1px solid orange;
   }
 
-  .text-container {
-    margin-left: 80px;
-    align-self: center;
-
-    h1 {
-      font-size: 50px;
-      margin-bottom: 20px;
-    }
+  .af-left-cont-upper-lower {
+    // border: 1px solid blue;
+    width: 100%;
+    height: 13%;
+    display: flex;
+    align-items: center;
 
     p {
-      font-size: 25px;
-      margin-bottom: 20px;
-    }
-  }
-}
-
-.above-fold-lower {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  justify-content: center;
-  width: 1400px;
-  height: 50%;
-
-  h2 {
-    font-size: 30px;
-    margin-bottom: 30px;
-  }
-
-  p {
-    font-size: 18px;
-    margin-bottom: 30px;
-  }
-
-  button {
-    width: 120px;
-    height: 30px;
-  }
-}
-
-.below-fold-container {
-  width: 1400px;
-  display: flex;
-  flex-direction: column;
-
-  h2 {
-    font-size: 30px;
-    margin-bottom: 30px;
-  }
-
-  p {
-    font-size: 18px;
-    margin-bottom: 30px;
-  }
-
-  h3 {
-    margin-top: 30px;
-    font-size: 25px;
-    margin-bottom: 20px;
-  }
-
-  h4 {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-
-  .projects-container {
-    h2 {
-      margin-top: 60px;
-    }
-
-    section.project {
-      height: 800px;
-      width: 100%;
-      background-color: pink;
-      margin-bottom: 20px;
-      display: flex;
-
-      .project-left-half {
-        width: 45%;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
-        background-color: fuchsia;
-      }
-
-      .project-right-half {
-        width: 50%;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
-        background-color: grey;
-      }
+      font-size: 3rem;
+      color: #9ac6c9;
+      margin-left: 12.5%;
+      margin-top: 3%;
     }
   }
 
-  .contact-form {
+  .af-left-cont-main {
+    height: 40%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    // border: 1px solid red;
+
+    // .intro-container {
+    //   font-size: 4rem;
+    //   color: #9ac6c9;
+    //   position: relative;
+    //   // top: -50px;
+    //   // left: 45px;
+    // }
+
+    .text-container,
+    .shapes-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      height: 100%;
+      // width: 75%;
+      margin-left: 5%;
+      // margin-right: 5%;
+    }
+
+    .text-container {
+      position: absolute;
+      z-index: 1;
+    }
+
+    .shapes-container {
+      position: absolute;
+      z-index: 0;
+    }
+
+    .chris-container,
+    .jones-container {
+      display: flex;
+      justify-content: space-between;
+      height: 200px;
+    }
+
+    .chris,
+    .jones {
+      color: #f649a7;
+      font-size: 12rem;
+      width: 200px;
+      height: 200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .letter-c,
+    .letter-h,
+    .letter-r,
+    .letter-i,
+    .letter-j,
+    .letter-o,
+    .letter-n,
+    .letter-e {
+      text-shadow: 8px 8px 0 #3c52d1;
+    }
+
+    .letter-s.jones {
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 40 40" xml:space="preserve" height="8px" width="8px"><g ><circle r="12" cx="12" cy="12" fill="%23EC2F95"/></g></svg>');
+      color: transparent;
+      -webkit-background-clip: text;
+    }
+
+    .circle {
+      border: 10px dashed #3c51d1;
+      border-radius: 50%;
+    }
+
+    .square {
+      border: 10px solid #3c51d1;
+      box-shadow: 10px 10px 0 0px #9ac6c9;
+    }
+
+    .blob-one,
+    .blob-two {
+      background-color: #9ac6c9;
+      border-radius: 33%;
+      position: relative;
+    }
+
+    .blob-three {
+      position: relative;
+      left: -200px;
+      top: 125px;
+      background-color: #9ac6c9;
+    }
+  }
+
+  .af-right-cont {
+    height: 66%;
+    width: 50%;
+    // border: 1px solid purple;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // border: 1px solid turquoise;
+
+    img {
+      height: 75%;
+      border-radius: 50%;
+      // margin-right: 15%;
+    }
   }
 }
