--- a/less/index.less
+++ b/less/index.less
@@ -28,8 +28,9 @@ main {
 
     p {
       font-size: 3rem;
+      font-style: italic;
       color: #9ac6c9;
-      margin-left: 12.5%;
+      margin-left: 11%;
       margin-top: 3%;
     }
   }
@@ -99,7 +100,8 @@ main {
     .letter-j,
     .letter-o,
     .letter-n,
-    .letter-e {
+    .letter-e,
+    .letter-s.chris {
       text-shadow: 8px 8px 0 #3c52d1;
     }
 
