--- a/css/index.css
+++ b/css/index.css
@@ -349,7 +349,7 @@ main {
   align-items: center;
 }
 .above-fold-intro-container {
-  height: 100vh;
+  height: 91vh;
   width: 100vw;
   max-width: 100%;
   max-height: 100%;
@@ -361,6 +361,8 @@ main {
 .above-fold-intro-container .af-left-cont-upper-lower {
   width: 100%;
   height: 13%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
   display: flex;
   align-items: center;
 }
@@ -368,8 +370,7 @@ main {
   font-size: 3rem;
   font-style: italic;
   color: #9ac6c9;
-  margin-left: 11%;
-  margin-top: 3%;
+  margin-left: 7.5%;
 }
 .above-fold-intro-container .af-left-cont-main {
   height: 40%;
@@ -385,8 +386,7 @@ main {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  height: 100%;
-  margin-left: 5%;
+  margin-left: 2.5%;
 }
 .above-fold-intro-container .af-left-cont-main .text-container {
   position: absolute;
@@ -455,8 +455,179 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 2.5%;
+  margin-top: 2.55%;
+  margin-bottom: 2.5%;
 }
 .above-fold-intro-container .af-right-cont img {
   height: 75%;
   border-radius: 50%;
+}
+.about-container {
+  width: 1400px;
+}
+.about-container h2 {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-top: 40px;
+  margin: 0 5% 20px 5%;
+  color: #9ac6c9;
+  text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
+}
+.about-container p {
+  font-size: 1.7rem;
+  margin: 0 5% 20px 5%;
+  color: #9ac6c9;
+  line-height: 1.8;
+  margin-bottom: 80px;
+}
+.all-projects-container {
+  width: 1400px;
+}
+.all-projects-container h2 {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-top: 40px;
+  margin: 0 5% 20px 5%;
+  color: #9ac6c9;
+  text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
+}
+.all-projects-container p {
+  font-size: 1.7rem;
+  margin: 0 5% 20px 5%;
+  color: #9ac6c9;
+  line-height: 1.8;
+}
+.all-projects-container .project-container {
+  width: 90%;
+  margin: 0 5% 30px 5%;
+  border: 1px solid #9ac6c9;
+  display: flex;
+}
+.all-projects-container .project-container .project-text-container {
+  width: 55%;
+  border-right: 1px solid #9ac6c9;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.all-projects-container .project-container .project-text-container .languages {
+  color: #f649a7;
+  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+  text-align: center;
+}
+.all-projects-container .project-container .project-text-container .button-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 5% 0 5%;
+}
+.all-projects-container .project-container .project-text-container .button-container button {
+  width: 47.5%;
+  height: 50px;
+  font-size: 1.7rem;
+  color: #9ac6c9;
+  background: #242840;
+  border: 1px dashed #9ac6c9;
+  text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
+  cursor: pointer;
+}
+.all-projects-container .project-container .project-text-container .button-container :hover {
+  color: #f649a7;
+  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+  border: 1px dashed #f649a7;
+}
+.all-projects-container .project-container .project-img-container {
+  width: 45%;
+}
+.all-projects-container .project-container .project-img-container img {
+  width: 95%;
+  margin: 2.5% 2.5% 2.5% 2.5%;
+}
+.contact-container {
+  width: 90%;
+  height: 500px;
+  margin: 60px auto 60px auto;
+  display: flex;
+  justify-content: center;
+}
+.contact-container .contact-left {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.contact-container .contact-left h2 {
+  margin-left: 0;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.contact-container .contact-left p {
+  margin-left: 0;
+}
+.contact-container .contact-left a {
+  text-decoration: none;
+}
+.contact-container .contact-left a :hover {
+  color: #f649a7;
+  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+}
+.contact-container .contact-right {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.contact-container .contact-right form {
+  display: flex;
+  width: 75%;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  font-size: 2rem;
+  color: #9ac6c9;
+  font-weight: normal;
+  cursor: default;
+}
+.contact-container .contact-right form input,
+.contact-container .contact-right form textarea {
+  padding-bottom: 2rem;
+  padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: 400;
+  display: flex;
+  color: #3f3f67;
+  font-family: "IBM Plex Mono";
+}
+.contact-container .contact-right form input[type="button"],
+.contact-container .contact-right form input[type="submit"],
+.contact-container .contact-right form input[type="reset"] {
+  height: 50px;
+  font-size: 1.7rem;
+  color: #9ac6c9;
+  background: #242840;
+  border: 1px dashed #9ac6c9;
+  text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
+  cursor: pointer;
+  text-align: center;
+  padding-left: 19%;
+  padding-right: 19%;
+}
+.contact-container .contact-right form input[type="button"]:hover,
+.contact-container .contact-right form input[type="submit"]:hover,
+.contact-container .contact-right form input[type="reset"]:hover {
+  color: #f649a7;
+  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+  background: #242840;
+}
+.contact-container .contact-right form .button-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.contact-container .contact-right form .button-container .button {
+  text-align: center;
 }
