--- a/less/index.less
+++ b/less/index.less
@@ -1,6 +1,196 @@
 @import "variables.less";
 @import "blog.less";
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 62.5%;
+  // font: initial;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+  font-family: "IBM Plex Mono", "monospace", "Helvetica Neue Light",
+    "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  background-color: #242840;
+
+  @media @tablet {
+    width: 800px;
+    justify-content: center;
+  }
+
+  @media @mobile {
+    width: 500px;
+    justify-content: center;
+  }
+
+  a,
+  p {
+    font-size: 1.6rem;
+  }
+}
+
+header.h-nav-toolbar {
+  height: 8vh;
+  width: 100vw;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #242840;
+  border: 1px dashed #9ac5c9;
+
+  h1 {
+    width: 28%;
+    text-decoration: none;
+    color: #f649a7;
+    text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+    font-weight: bold;
+    font-size: 3.2rem;
+    margin-left: 5%;
+  }
+
+  nav.h-nav-links {
+    width: 33%;
+    display: flex;
+    justify-content: center;
+
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      color: #f649a7;
+      text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+      font-weight: bold;
+      border-left: 1px dashed #9ac5c9;
+      height: 8vh;
+      width: 100px;
+    }
+
+    a:last-of-type {
+      border-right: 1px dashed #9ac5c9;
+    }
+  }
+
+  nav.h-social-links {
+    width: 28%;
+    margin-right: 5%;
+    display: flex;
+    justify-content: flex-end;
+
+    a {
+      text-decoration: none;
+      color: #f649a7;
+      text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+      font-weight: bold;
+      padding-left: 20px;
+    }
+  }
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -268,11 +458,11 @@ main {
 
     a {
       text-decoration: none;
+    }
 
-      :hover {
-        color: rgb(246, 73, 167);
-        text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
-      }
+    .social-link:hover {
+      color: rgb(246, 73, 167);
+      text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
     }
   }
 
