--- a/less/index.less
+++ b/less/index.less
@@ -433,7 +433,7 @@ main {
 
 .contact-container {
   width: 90%;
-  height: 500px;
+  // height: 500px;
   margin: 60px auto 60px auto;
   // border: 1px solid red;
   display: flex;
@@ -538,5 +538,26 @@ main {
         }
       }
     }
+  }
+}
+
+footer {
+  height: 8vh;
+  width: 100vw;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #242840;
+  border: 1px dashed #9ac5c9;
+
+  p {
+    height: 100%;
+    color: #9ac6c9;
+    border-left: 1px dashed #9ac5c9;
+    border-right: 1px dashed #9ac5c9;
+    display: flex;
+    align-items: center;
+    padding: 0 20px 0 20px;
   }
 }
