WIP: styling changes

--- a/css/index.css
+++ b/css/index.css
@@ -553,27 +553,6 @@ main {
   color: #3f3f67;
   font-family: "IBM Plex Mono";
 }
-.contact-container .contact-right form input[type="button"],
-.contact-container .contact-right form input[type="submit"],
-.contact-container .contact-right form input[type="reset"] {
-  height: 50px;
-  font-size: 1.7rem;
-  color: #9ac6c9;
-  background: #242840;
-  border: 1px dashed #9ac6c9;
-  text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
-  cursor: pointer;
-  text-align: center;
-  padding-left: 19%;
-  padding-right: 19%;
-}
-.contact-container .contact-right form input[type="button"]:hover,
-.contact-container .contact-right form input[type="submit"]:hover,
-.contact-container .contact-right form input[type="reset"]:hover {
-  color: #f649a7;
-  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
-  background: #242840;
-}
 .contact-container .contact-right form .button-container {
   display: flex;
   justify-content: space-between;
@@ -581,6 +560,27 @@ main {
 }
 .contact-container .contact-right form .button-container .button {
   text-align: center;
+}
+.contact-container .contact-right form .button-container input[type="button"],
+.contact-container .contact-right form .button-container input[type="submit"],
+.contact-container .contact-right form .button-container input[type="reset"] {
+  height: 100%;
+  font-size: 1.7rem;
+  color: #9ac6c9;
+  background: #242840;
+  border: 1px dashed #9ac6c9;
+  text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
+  cursor: pointer;
+  text-align: center;
+  padding: 2.5% 17.5% 2.5% 17.5%;
+}
+.contact-container .contact-right form .button-container input[type="button"]:hover,
+.contact-container .contact-right form .button-container input[type="submit"]:hover,
+.contact-container .contact-right form .button-container input[type="reset"]:hover {
+  color: #f649a7;
+  text-shadow: 0 2px 3px rgba(246, 73, 167, 0.5);
+  border: 1px dashed #f649a7;
+  background: #242840;
 }
 footer {
   height: 8vh;
