--- a/less/index.less
+++ b/less/index.less
@@ -338,7 +338,7 @@ main {
   h2 {
     font-size: 3rem;
     font-weight: 800;
-    padding-top: 40px;
+    // padding-top: 40px;
     margin: 0 5% 20px 5%;
     color: #9ac6c9;
     text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
