--- a/less/index.less
+++ b/less/index.less
@@ -361,8 +361,8 @@ main {
   h2 {
     font-size: 3rem;
     font-weight: 800;
-    padding-top: 40px;
-    margin: 0 5% 20px 5%;
+    padding-top: 0;
+    margin: 0 5% 0 5%;
     color: #9ac6c9;
     text-shadow: 0 2px 5px rgba(246, 73, 167, 0.6);
     // border: 1px solid yellow;
@@ -370,16 +370,21 @@ main {
 
   p {
     font-size: 1.7rem;
-    margin: 0 5% 20px 5%;
+    margin: 0 5% 0 5%;
     color: #9ac6c9;
     line-height: 1.8;
     // border: 1px solid pink;
   }
 
+  .projects-subtitle,
+  .projects-tagline {
+    margin-bottom: 20px;
+  }
+
   .project-container {
     width: 90%;
     // height: 500px;
-    margin: 0 5% 30px 5%;
+    margin: 0 5% 0 5%;
     border: 1px solid #9ac6c9;
     display: flex;
 
