--- a/less/index.less
+++ b/less/index.less
@@ -116,6 +116,7 @@ body {
   font-family: "IBM Plex Mono", "monospace", "Helvetica Neue Light",
     "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   background-color: #242840;
+  scroll-behavior: smooth;
 
   @media @tablet {
     width: 800px;
