--- a/css/index.css
+++ b/css/index.css
@@ -224,18 +224,6 @@ body {
   background-color: #242840;
   scroll-behavior: smooth;
 }
-@media (max-width: 800px) {
-  body {
-    width: 800px;
-    justify-content: center;
-  }
-}
-@media (max-width: 500px) {
-  body {
-    width: 500px;
-    justify-content: center;
-  }
-}
 body a,
 body p {
   font-size: 1.6rem;
@@ -247,7 +235,8 @@ header.h-nav-toolbar {
   display: flex;
   align-items: center;
   background-color: #242840;
-  border: 1px dashed #9ac5c9;
+  border-top: 1px dashed #9ac5c9;
+  border-bottom: 1px dashed #9ac5c9;
 }
 header.h-nav-toolbar h1 {
   width: 28%;
@@ -275,6 +264,12 @@ header.h-nav-toolbar nav.h-nav-links a {
   height: 8vh;
   width: 100px;
 }
+@media (max-width: 1200px) {
+  header.h-nav-toolbar nav.h-nav-links a {
+    width: auto;
+    padding: 0 20px 0 20px;
+  }
+}
 header.h-nav-toolbar nav.h-nav-links a:last-of-type {
   border-right: 1px dashed #9ac5c9;
 }
@@ -283,6 +278,11 @@ header.h-nav-toolbar nav.h-social-links {
   margin-right: 5%;
   display: flex;
   justify-content: flex-end;
+}
+@media (max-width: 1200px) {
+  header.h-nav-toolbar nav.h-social-links {
+    display: none;
+  }
 }
 header.h-nav-toolbar nav.h-social-links a {
   text-decoration: none;
@@ -302,6 +302,11 @@ main {
   max-width: 100%;
   max-height: 100%;
   display: flex;
+}
+@media (max-width: 1200px) {
+  .above-fold-intro-container {
+    flex-direction: column;
+  }
 }
 .above-fold-intro-container .left-wrapper {
   width: 100%;
@@ -340,26 +345,52 @@ main {
   position: absolute;
   z-index: 1;
 }
+@media (max-width: 1200px) {
+  .above-fold-intro-container .af-left-cont-main .text-container {
+    position: relative;
+    margin-bottom: 60px;
+    width: 100%;
+    margin: 0 0 90px 0;
+  }
+}
 .above-fold-intro-container .af-left-cont-main .shapes-container {
   position: absolute;
   z-index: 0;
+}
+@media (max-width: 1200px) {
+  .above-fold-intro-container .af-left-cont-main .shapes-container {
+    display: none;
+  }
 }
 .above-fold-intro-container .af-left-cont-main .chris-container,
 .above-fold-intro-container .af-left-cont-main .jones-container {
   display: flex;
   justify-content: space-between;
-  height: 200px;
+  height: 20rem;
+}
+@media (max-width: 1200px) {
+  .above-fold-intro-container .af-left-cont-main .chris-container,
+  .above-fold-intro-container .af-left-cont-main .jones-container {
+    width: 100%;
+    height: 15rem;
+  }
 }
 .above-fold-intro-container .af-left-cont-main .chris,
 .above-fold-intro-container .af-left-cont-main .jones {
   color: #f649a7;
   font-size: 12rem;
-  width: 200px;
-  height: 200px;
+  width: 20rem;
+  height: 20rem;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+@media (max-width: 1200px) {
+  .above-fold-intro-container .af-left-cont-main .chris,
+  .above-fold-intro-container .af-left-cont-main .jones {
+    width: 20%;
+  }
 }
 .above-fold-intro-container .af-left-cont-main .letter-c,
 .above-fold-intro-container .af-left-cont-main .letter-h,
@@ -376,6 +407,12 @@ main {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 40 40" xml:space="preserve" height="8px" width="8px"><g ><circle r="12" cx="12" cy="12" fill="%23EC2F95"/></g></svg>');
   color: transparent;
   -webkit-background-clip: text;
+}
+@media (max-width: 1200px) {
+  .above-fold-intro-container .af-left-cont-main .letter-s.jones {
+    color: #f649a7;
+    text-shadow: 8px 8px 0 #3c52d1;
+  }
 }
 .above-fold-intro-container .af-left-cont-main .circle {
   border: 10px dashed #3c51d1;
@@ -407,6 +444,11 @@ main {
   margin-top: 2.55%;
   margin-bottom: 2.5%;
 }
+@media (max-width: 1200px) {
+  .above-fold-intro-container .af-right-cont {
+    display: none;
+  }
+}
 .above-fold-intro-container .af-right-cont img {
   height: 75%;
   border-radius: 50%;
@@ -414,6 +456,12 @@ main {
 }
 .about-container {
   width: 1400px;
+}
+@media (max-width: 1200px) {
+  .about-container {
+    width: 95%;
+    margin: 0 2.5% 0 2.5%;
+  }
 }
 .about-container h2 {
   font-size: 3rem;
@@ -431,6 +479,12 @@ main {
 }
 .all-projects-container {
   width: 1400px;
+}
+@media (max-width: 1200px) {
+  .all-projects-container {
+    width: 95%;
+    margin: 0 2.5% 0 2.5%;
+  }
 }
 .all-projects-container h2 {
   font-size: 3rem;
@@ -490,6 +544,11 @@ main {
 }
 .all-projects-container .project-container .project-img-container {
   width: 45%;
+}
+@media (max-width: 1200px) {
+  .all-projects-container .project-container .project-img-container {
+    padding: 50px 0 50px 0;
+  }
 }
 .all-projects-container .project-container .project-img-container img {
   width: 95%;
@@ -595,7 +654,8 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: #242840;
-  border: 1px dashed #9ac5c9;
+  border-top: 1px dashed #9ac5c9;
+  border-bottom: 1px dashed #9ac5c9;
 }
 footer p {
   height: 100%;
